vlib/v/checker/tests/undefined_ident_of_struct.vv
module main

fn get()  {
	f.a = 'test'
}

fn main() {
	println('hello')
}
